fix: mobile friendly collapse for Entity page

--- a/assets/css/ioda/sass/pages/_entity.scss
+++ b/assets/css/ioda/sass/pages/_entity.scss
@@ -16,81 +16,17 @@
     min-width: 0;
     max-height: 614px;
   }
+}
 
-  .related {
-    margin-bottom: $gutter-vertical;
+.entity-related {
+  margin-bottom: $gutter-vertical;
 
-    @include respond(tab-port) {
-      padding: 0;
-    }
+  @include respond(tab-port) {
+    flex-direction: column;
+    padding: 0;
+  }
 
-    .col-1-of-2 {
-      background-color: $color-white;
-      border-bottom-right-radius: 0.3rem;
-      border-bottom-left-radius: 0.3rem;
-      border-top-right-radius: 0.3rem;
-      height: 50rem;
-      box-shadow: $box-shadow;
-      padding: $gutter-vertical-small;
-
-      @include respond(tab-port) {
-        height: unset;
-      }
-
-      & .table--summary tbody {
-        max-height: 34rem;
-      }
-    }
-
-    &__heading {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      margin-bottom: 1.5rem;
-
-      &-title {
-        display: flex;
-
-        & .heading-h3 {
-          margin-right: 0.5rem;
-        }
-
-        & .help {
-          height: 2.6rem;
-
-          &__modal {
-            top: 0;
-            @include mobileTooltip();
-          }
-        }
-      }
-    }
-
-    &__no-outages {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 6rem;
-
-      & .related__modal-button {
-        margin-bottom: 1.5rem;
-
-        @include respond(tab-port) {
-          margin-left: 0;
-        }
-      }
-    }
-
-    &__modal-button {
-      @include button;
-      height: 3rem;
-      font-size: 1rem;
-      margin: 0;
-      padding: 0 1rem;
-
-      @include respond(tab-port) {
-        margin-left: 3rem;
-      }
-    }
+  .table--summary tbody {
+    max-height: 34rem;
   }
 }
