--- a/assets/css/style.comp.css
+++ b/assets/css/style.comp.css
@@ -5445,122 +5445,15 @@ button[class*="searchButton"] {
   .entity__chart {
     min-width: 0;
     max-height: 614px; }
-  .entity .related {
-    margin-bottom: 1.5rem; }
-    @media only screen and (max-width: 64em) {
-      .entity .related {
-        padding: 0; } }
-    .entity .related .col-1-of-2 {
-      background-color: #fff;
-      border-bottom-right-radius: 0.3rem;
-      border-bottom-left-radius: 0.3rem;
-      border-top-right-radius: 0.3rem;
-      height: 50rem;
-      box-shadow: 0 1px 2px #9F9D9D;
-      padding: 2rem; }
-      @media only screen and (max-width: 64em) {
-        .entity .related .col-1-of-2 {
-          height: unset; } }
-      .entity .related .col-1-of-2 .table--summary tbody {
-        max-height: 34rem; }
-    .entity .related__heading {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      margin-bottom: 1.5rem; }
-      .entity .related__heading-title {
-        display: flex; }
-        .entity .related__heading-title .heading-h3 {
-          margin-right: 0.5rem; }
-        .entity .related__heading-title .help {
-          height: 2.6rem; }
-          .entity .related__heading-title .help__modal {
-            top: 0; }
-            @media only screen and (max-width: 64em) {
-              .entity .related__heading-title .help__modal {
-                top: 4rem;
-                left: -21rem; } }
-            .entity .related__heading-title .help__modal-content:before {
-              top: 1.3rem;
-              background: #f7f7f7; }
-              @media only screen and (max-width: 64em) {
-                .entity .related__heading-title .help__modal-content:before {
-                  top: 0;
-                  left: 20.5rem; } }
-            .entity .related__heading-title .help__modal-content:after {
-              top: 0;
-              background: #f7f7f7;
-              transform: translateY(0); }
-              @media only screen and (max-width: 64em) {
-                .entity .related__heading-title .help__modal-content:after {
-                  height: 4.25rem;
-                  width: 1.5em;
-                  left: 20.5rem;
-                  top: -1.2rem;
-                  transform: translateY(0) rotate(90deg); } }
-    .entity .related__no-outages {
-      display: flex;
+
+.entity-related {
+  margin-bottom: 1.5rem; }
+  @media only screen and (max-width: 64em) {
+    .entity-related {
       flex-direction: column;
-      align-items: center;
-      margin-top: 6rem; }
-      .entity .related__no-outages .related__modal-button {
-        margin-bottom: 1.5rem; }
-        @media only screen and (max-width: 64em) {
-          .entity .related__no-outages .related__modal-button {
-            margin-left: 0; } }
-    .entity .related__modal-button {
-      background: linear-gradient(2deg, #1A5DAE, #598DCC, #1A5DAE, #598DCC);
-      height: 3.5rem;
-      border-radius: 0.5rem;
-      color: #fff;
-      font-weight: 700;
-      font-size: 16px;
-      cursor: pointer;
-      margin: 2rem;
-      text-align: center;
-      border: none;
-      background-size: 100% 300%;
-      transition: all .4s ease-in-out;
-      position: relative;
-      z-index: 10;
-      padding: 0 0.5rem;
-      box-shadow: inset 0 0.2rem 0.1rem rgba(255, 255, 255, 0.2), inset 0 0 0 0.1rem rgba(0, 0, 0, 0.15), 0 0.1rem 0 rgba(255, 255, 255, 0.15);
-      height: 3rem;
-      font-size: 1rem;
-      margin: 0;
-      padding: 0 1rem; }
-      .entity .related__modal-button:before {
-        content: '';
-        display: inline-block;
-        height: 40px;
-        position: absolute;
-        bottom: -5px;
-        left: 30px;
-        right: 30px;
-        z-index: -1;
-        border-radius: 30em;
-        filter: blur(20px) brightness(0.95);
-        transform-style: preserve-3d;
-        transition: all 0.3s ease-out; }
-        .entity .related__modal-button:before:hover {
-          bottom: -7px;
-          opacity: 1;
-          filter: blur(20px);
-          background: linear-gradient(2deg, #C12F2E, #f9ad40, #C12F2E, #f9ad40); }
-      .entity .related__modal-button:hover, .entity .related__modal-button:active {
-        border-radius: 0.5rem;
-        transition: all .4s ease-in-out;
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-        filter: brightness(1.05) contrast(1.05);
-        transform: scale(1.03); }
-        .entity .related__modal-button:hover:before, .entity .related__modal-button:active:before {
-          bottom: -7px;
-          filter: blur(10px) brightness(0.95); }
-      .entity .related__modal-button:focus {
-        outline: none; }
-      @media only screen and (max-width: 64em) {
-        .entity .related__modal-button {
-          margin-left: 3rem; } }
+      padding: 0; } }
+  .entity-related .table--summary tbody {
+    max-height: 34rem; }
 
 .projectinfo {
   padding-top: 5rem;
